# amc7812

./: .gitignore  CMakeLists.txt  README.md  amc7812.c  amc7812conf.h  main.c  makefile  serial.c  serial.h
examples/: CMakeLists.txt  amc7812_test.c  amc7812_test.cpp
examples/amc7812_dac_test/: amc7812_dac_test.cpp  amc7812conf.h
examples/amc7812_monitoringServer/: amc7812_monitoringServer.cpp
examples/amc7812_monitoringServer_inet/: amc7812_monitoringServer_inet.cpp
examples/amc7812_monitoringServer_ints/: amc7812_monitoringServer_ints.cpp
examples/amc7812_stream/: amc7812_stream.cpp  amc7812conf.h  udpRecv.py
examples/amc7812_test/: amc7812_test.cpp  amc7812conf.h
examples/amc7812_trig-daq/: amc7812_trig-daq.cpp  udpRecv.py
examples/frontpanel_test/: frontpanel_test.cpp
include/: amc7812.h  amc7812conf.h  amc7812err.h  frontpanel.h  tpic2810.h
include/variants/mega/: amc7812conf.h
include/variants/standard/: amc7812conf.h
src/: amc7812.cpp  frontpanel.cpp
